Update font loading, component structure, and example rendering
- Replaced local font loading with CDN-hosted SF Pro font in index.html
- Refactored CheckboxLabel and RadioLabel components to separate input and label rendering
- Updated Table and Examples components with minor structural improvements
- Removed unused dropdown-menu component
- Adjusted font and component import paths

--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-    <title>Vite + React + TS</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.statically.io/gh/TORCH-Corp/SF-PRO-FONT/main/font/fonts.css"
+    />
+    <link
+      rel="preload"
+      href="https://cdn.statically.io/gh/TORCH-Corp/SF-PRO-FONT/main/font/SF-Pro.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <title>TORCH Glare</title>
   </head>
 
   <body>
